# GeoDoodle-old

./: .gitignore  CMakeLists.txt  CREDITS.md  Color.py  Game.py  GeoDoodlePython.py  Geometry.py  Globals.py  Gui.py  Line.py  Pattern.py  Point.py  PythonPyGame.py  README.md  README.txt  main.py  pyOpenGLTest.py  requirements.txt  settings.json  suggested changes  suggested changes.txt  todo
C++ Version/: settings.json
C++ Version/saves/: .gdl  eyes.gdl  icon.gdl.gdl  jerky.gdl  q.gdl.gdl  y.gdl.gdl
C++ Version/src/: glutCallbacks.h  nuklearSettup.cpp  uiDraw.cpp
C++V2/: .clang-format
C++V2/include/: Line.hpp
C++V2/src/: ColorButton.py  ColorDialog.py  DoublePushButton.py  Game.py  Line.py  Pattern.py  Point.py  main.py
C++V2/src/Paper/: __init__.py  _dots.py  _events.py  _file.py  _lines.py  _misc.py  _pattern.py  _shortcuts.py
C++V2/ui/: main.pyproject  main.pyproject.user.5ea99e9  main.ui  meme.ui  repeat.ui
C++_Version/src/: array.cpp  debug.h  driver.cpp  game.cpp  gameHandleInput.cpp  line.h  qml.qrc  uiDraw.h  uiInteract.cpp  uiInteract.h
CMake/Dependencies/: GLUT.cmake
Old_Versions/C++_Version/CMake/Dependencies/: JSON.cmake
Old_Versions/Pygame_Version/: pyvenv.cfg  settings.jsonc  setup.py
Old_Versions/Pygame_Version/src/: Elements.py  Game.py  Geometry.py  Menus.py
Pygame_Version/data/: myTheme.json  theme_1.json
Pygame_Version/src/: Elements.py  Menus.py  Pattern.py  Point.py  menu.py
Qt_Version/: goodTestPattern  pyvenv.cfg  this cool pattern  todo
Qt_Version/.tmp/: form.ui  main.py
Qt_Version/src/: ColorButton.py  ColorDialog.py  Cope.py  DoublePushButton.py  FileManager.py  Game.py  Geometry.py  Line.py  Paper.py  Pattern.py  Point.py  RepeatMenu.py  Selection.py  Settings.py  Singleton.py  Transformation.py  Window.py  main.py  testingWithPygame.ipynb
Qt_Version/src/Paper/: __init__.py  _dots.py  _events.py  _file.py  _input.py  _lines.py  _misc.py  _pattern.py  _shortcuts.py
Qt_Version/ui/: FileManager.ui  main.pyproject  main.ui  main.ui.bak  preferences.ui  repeat.ui  repeat.ui.autosave
saves/: .gdl  Classic.gdl.gdl  Repeat this.gdl.gdl  box swirls.gdl  dotspread test.gdl  fileDialog.gdl  fun.gdl  good complex template.gdl  pretty.gdl  simple squares.gdl  sorta squares.gdl  test test.gdl  test.gdl
src/: Array.h  ColorButton.py  Elements.py  Game.py  Geometry.py  Gui.py  Line.py  Menus.py  Pattern.py  Point.py  Settings.py  Singleton.py  array.cpp  array.h  driver.cpp  game.cpp  game.h  gameAdvance.cpp  gameHandleInput.cpp  glutCallbacks.cpp  glutCallbacks.h  line.h  main.py  point.cpp  point.h  settingsLayout.qml  uiDraw.cpp  uiDraw.h  uiInteract.cpp  uiInteract.h
src/Paper/: __init__.py  _lines.py  _misc.py
ui/: main.pyproject  main.ui  preferences.ui  repeat.ui
